# budoux-rs

./: .editorconfig  .gitignore  Cargo.toml  README.md  budoux-demo-fb3edc2b613ecae1.js  budoux-demo-fb3edc2b613ecae1_bg.wasm  go.mod  index-6990031308dffa88.css  index.html
.github/workflows/: gh-pages.yaml  test.yaml
benches/: bench.rs
examples/cli/: Cargo.toml  README.md  main.rs
examples/demo/: Cargo.toml  README.md  index.html  index.scss
examples/demo/src/: main.rs
src/: ja_knbc.rs  lib.rs  models.rs  unicode_blocks.rs  zh_hans.rs
