[package]
name = "budoux"
version = "0.0.4"
edition = "2021"

description = "Rust port of BudouX (machine learning powered line break organizer tool)."
license = "Apache-2.0"
repository = "https://github.com/sg0hsmt/budoux-rs"
exclude = ["go.mod", "/gen", ".*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.9.0"

[dev-dependencies]

[workspace]
members = [
    "examples/cli",
    "examples/demo",
]
